--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,11 @@
 	<meta name='theme-color' content='#333333'>
 
 	%sapper.base%
-
 	<link rel='stylesheet' href='global.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+
 	<link rel='icon' type='image/png' href='favicon.png'>
+
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
